--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   #   branches: [ pr.* ]
   #   paths: [ cmake/projects/** ]
   pull_request:
-    #branches: [ master github_actions_ci ]
+    branches: [ github_actions_ci ]
     paths: [ cmake/projects/** ]
 
 jobs:
@@ -16,33 +16,40 @@ jobs:
         include:
           # Linux
           - { os: ubuntu-16.04, toolchain: clang-cxx17 }
-          - { os: ubuntu-16.04, toolchain: gcc-7-cxx17 }
-          - { os: ubuntu-16.04, toolchain: android-ndk-r17-api-24-arm64-v8a-clang-libcxx14 }
-          - { os: ubuntu-16.04, toolchain: analyze-cxx17 }
-          - { os: ubuntu-16.04, toolchain: sanitize-address-cxx17 }
-          - { os: ubuntu-16.04, toolchain: sanitize-leak-cxx17 }
-          - { os: ubuntu-16.04, toolchain: sanitize-thread-cxx17 }
-          # OSX
-          - { os: macos-10.15,  toolchain: osx-10-13-make-cxx14 }
-          - { os: macos-10.15,  toolchain: osx-10-13-cxx14 }
-          - { os: macos-10.15,  toolchain: ios-nocodesign-13-2-dep-9-3 }
-          # Windows
-          - { os: windows-2016, toolchain: ninja-vs-15-2017-win64-cxx17 }
-          - { os: windows-2016, toolchain: nmake-vs-15-2017-win64-cxx17 }
-          - { os: windows-2016, toolchain: vs-15-2017-win64-cxx17 }
-          - { os: windows-2016, toolchain: vs-14-2015-sdk-8-1 }
-          - { os: windows-2016, toolchain: mingw-cxx17 }
-          - { os: windows-2016, toolchain: msys-cxx17 }
+          # - { os: ubuntu-16.04, toolchain: gcc-7-cxx17 }
+          # - { os: ubuntu-16.04, toolchain: android-ndk-r17-api-24-arm64-v8a-clang-libcxx14 }
+          # - { os: ubuntu-16.04, toolchain: analyze-cxx17 }
+          # - { os: ubuntu-16.04, toolchain: sanitize-address-cxx17 }
+          # - { os: ubuntu-16.04, toolchain: sanitize-leak-cxx17 }
+          # - { os: ubuntu-16.04, toolchain: sanitize-thread-cxx17 }
+          # # OSX
+          # - { os: macos-10.15,  toolchain: osx-10-13-make-cxx14 }
+          # - { os: macos-10.15,  toolchain: osx-10-13-cxx14 }
+          # - { os: macos-10.15,  toolchain: ios-nocodesign-13-2-dep-9-3 }
+          # # Windows
+          # - { os: windows-2016, toolchain: ninja-vs-15-2017-win64-cxx17 }
+          # - { os: windows-2016, toolchain: nmake-vs-15-2017-win64-cxx17 }
+          # - { os: windows-2016, toolchain: vs-15-2017-win64-cxx17 }
+          # - { os: windows-2016, toolchain: vs-14-2015-sdk-8-1 }
+          # - { os: windows-2016, toolchain: mingw-cxx17 }
+          # - { os: windows-2016, toolchain: msys-cxx17 }
+
+    env:
+      TOOLCHAIN: ${{ matrix.toolchain }}
 
     steps:
 
-    - name: Set toolchain and project dir
+    - name: on pull_request - Set project dir
+      if: github.event_name == 'pull_request'
       shell: bash
       run: |
-        echo "::set-env name=TOOLCHAIN::${{ matrix.toolchain }}"
-        GIT_REF="${GITHUB_HEAD_REF:-$GITHUB_REF}"
-        PROJECT_NAME="${GIT_REF#refs/heads/pr.}"
-        echo "::set-env name=PROJECT_DIR::examples/${PROJECT_NAME}"
+        echo "::set-env name=PROJECT_DIR::examples/${GITHUB_HEAD_REF#pr.}"
+
+    - name: on push - Set project dir
+      if: github.event_name == 'push'
+      shell: bash
+      run: |
+        echo "::set-env name=PROJECT_DIR::examples/${GITHUB_REF#refs/heads/pr.}"
 
     - name: Git checkout with submodules
       uses: actions/checkout@v2
